--- a/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
@@ -1,28 +1,32 @@
-.resume-container{
+.heading-container{
     background-color: var(--background);
-    height: 160vh;
+    text-align: center;
     padding: 100px;
- 
-    .resume-content{
-        text-align: center;
+    align-items: center;
 
-        h1{
-            font-size: 35px;
+    .heading{
+
+
+        h3{
+            font-size: 2.6vw;
             font-weight: 400;
             color: var(--cream-500);
             margin-top: 40px;
         }
 
-        h1 + h1{
-            font-size: 70px;
+        h1{
+            margin-top: 40px;
+            font-size: 5.2vw;
+            //font-size: 64px;
             color: var(--white);
         }
 
         .resume-navbar{
             display: flex;
             justify-content: space-between;
-            margin-top: 80px;
-            padding: 0% 26%;
+            margin-top: 6%;
+            padding: 0% 21%;
+            padding-bottom: 6%;
             
             a{
                 text-decoration: none;
@@ -37,81 +41,5 @@
             }
         }
 
-        .resume-photo-section{
-            padding-top: 40px;
-            padding-bottom: 30px;
-            display: flex;
-            justify-content: space-between;
-            height: 600px;
-
-            .photo{
-                width: 405px;
-                height: 526px;
-                background-color: var(--white);
-                margin-left: 100px;  
-                margin-top: 45px; 
-            }
-
-            .details{
-                margin-left: 120px;
-                width: 50%;
-                text-align: left;       
-
-                h1{
-                    font-size: 20px;
-                    font-weight: 200;
-                    color: var(--cream-500);
-                }
-
-                p{
-                    padding-top: 20px;
-                    font-weight: 200;
-                    line-height: 25px;
-                    color: white;
-                }
-
-                span{
-                    padding-left: 20px;
-                }
-
-                .contact{
-                    padding-top: 20px;
-                    color: white;
-                    text-align: left;
-                    padding-left: 5px;
-                }
-
-                .work-progress-button{
-                    margin-top: 70px;
-                    align-content: center; 
-                   
-                    button{
-                        border-radius: 35px;
-                        outline: 1px solid var(--grey);
-                        outline-offset: 3px;
-                        height: 61px;
-                        width: 256px;
-                        color: var(--cream-700);
-                        font-family: var(--kanit-font-family);
-                        font-size: 18px;
-                        font-weight: 300;
-                        text-align: center;
-                        color: var(--grey);
-                        background-color: var(--dark-grey-100);
-                    }
-            
-                    button:hover{
-                        background-color: var(--button-hover);
-                    }
-
-                    img{
-                        width: 20px;
-                        height: 25px;
-                        margin-left: 15px;
-                        margin-bottom: -6px;
-                    }
-                }
-            }
-        }
     }
 }
