--- a/src/app/features/feature-portfolio/components/resume/resume-awards-section/resume-awards-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-awards-section/resume-awards-section.component.html
@@ -1,3 +1,63 @@
-<p>
-  portfolio-awards-section works!
-</p>
+<div class="awards">
+  <div class="awards-container">
+    <div class="award-item">
+      <h4>The Art & Design 2022</h4>
+      <p>1 st Winner</p>
+      <div class="icon-section">
+        <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+        <mat-icon svgIcon="magic-wand-icon"></mat-icon>
+        <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+      </div>
+    </div>
+
+    <div class="award-item">
+      <h4>The Art & Design 2022</h4>
+      <p>1 st Winner</p>
+      <div class="icon-section">
+        <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+        <mat-icon svgIcon="magic-wand-icon"></mat-icon>
+        <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+      </div>
+    </div>
+
+    <div class="award-item">
+      <h4>The Art & Design 2022</h4>
+      <p>1 st Winner</p>
+      <div class="icon-section">
+        <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+        <mat-icon svgIcon="magic-wand-icon"></mat-icon>
+        <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+      </div>
+    </div>
+
+    <!-- <div class="award-item">
+  <h4>The Art & Design 2022</h4>
+  <p>1 st Winner</p>
+  <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+  <mat-icon svgIcon="magic-wand-icon"></mat-icon>
+  <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+</div> -->
+  </div>
+
+
+  <div class="awards-navigation">
+    <button matButton>
+      <img src="assets/chevron-left.svg">
+      <img src="assets/chevron-left.svg">
+      <span>PREVIOUS</span> </button>
+
+    <div class="progress-bar-container">
+      <p>01</p>
+      <div class="progress-bar">
+        <div class="progress html"></div>
+      </div>
+      <p>04</p>
+    </div>
+
+    <button matButton>
+      <span>NEXT </span>
+      <img src="assets/chevron-rigth.svg">
+      <img src="assets/chevron-rigth.svg">
+    </button>
+  </div>
+</div>
