--- a/src/app/features/feature-portfolio/components/resume/resume-education-section/resume-education-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-education-section/resume-education-section.component.html
@@ -1,3 +1,30 @@
-<p>
-  portfolio-education-section works!
-</p>
+<div class="education">
+  <div class="timeline">
+    <div class="timeline-item-container">
+      <div class="timeline-item">
+        <h4>Junior UI/UX Designer</h4>
+        <p>2022 - 2023</p>
+        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+     </div>
+     <div class="timeline-item">
+       <h4>Junior UI/UX Designer</h4>
+       <p>2022 - 2023</p>
+       <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+    </div>
+    </div>
+
+   <hr style="border: 1px dashed white;">
+
+  <div class="timeline-item-container">
+    <div class="timeline-item">
+      <h4>Junior UI/UX Designer</h4>
+      <p>2022 - 2023</p>
+      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+     </div>
+     <div class="timeline-item">
+      <h4>Junior UI/UX Designer</h4>
+      <p>2022 - 2023</p>
+      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+     </div>
+  </div>
+</div>
