--- a/src/app/features/feature-portfolio/components/resume/resume-experience-section/resume-experience-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-experience-section/resume-experience-section.component.html
@@ -1,3 +1,28 @@
-<p>
-  portfolio-experience-section works!
-</p>
+<div class="experience">
+  <!-- <div class="vertical-timeline">
+
+  </div> -->
+  <!-- <div class="hr-timeline">
+   
+  </div> -->
+
+  <mat-icon svgIcon="outlined-dot"></mat-icon>
+  <hr> 
+
+  <div class="timeline">
+    <div class="timeline-item">
+       <h4>Junior UI/UX Designer</h4>
+       <p>2022 - 2023</p>
+       <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+    </div>
+    <div class="timeline-item">
+      <h4>Junior UI/UX Designer</h4>
+      <p>2022 - 2023</p>
+      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+   </div>
+   <div class="timeline-item">
+    <h4>Junior UI/UX Designer</h4>
+    <p>2022 - 2023</p>
+    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+ </div>
+</div>
