--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -1,162 +1,151 @@
-.navbar{
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: var(--kanit-font-family);
+  font-size: 18px;
+  font-weight: 200;
+  position: absolute;
+  top: 40px;
+  width: 100%;
+  padding: 0px 100px;
+  z-index: 1;
+
+  &-link {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    font-family: var(--kanit-font-family);
-    font-size: 18px;
-    font-weight: 200;
-    position: absolute;
-    top: 40px;
-    width: 100%;
-    padding: 0px 100px;
-    z-index: 1;
 
-    &-link{
-        display: flex;
-        align-items: center;
-
-        .logo{
-            margin-right: 100px;
-        } 
-
-        .navbar-link-items{
-            display: grid;
-            grid-auto-flow: column;
-            align-items: center;
-           
-            a{
-                text-decoration: none;
-                color: var(--white);
-                padding: 10px 20px;
-            }
-
-            a:hover{
-                color: var(--cream-500);
-            }
-
-            a:focus{
-                color: var(--cream-500);
-            }
-
-            span{
-                margin-left: 10px;
-            }
-
-
-            a:last-child{
-                :hover{
-                    cursor: pointer;
-                }
-                
-                nav{
-                    padding-top: 5px;
-                    color: white;
-                   
-                    .dropdown-content {
-                        position: absolute;
-                        display: none;
-                        background-color: #f1f1f1;
-                        min-width: 160px; /* Set width */
-                        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
-                    }
-                }
-            }  
-            
-            a:last-child{
-                :hover{
-                    cursor: pointer;
-                    .dropdown-content {
-                        display: grid; /* Show dropdown on hover */
-                        //margin-top: 30px;
-                        margin-left: -45px;
-    
-                       li{
-                        margin-top: 30px;
-    
-                        a{
-                            color: var(--body-text-color);
-                            
-                            &:hover{
-                                color: var(--cream-500);
-                                background-color: var(--dark-grey-500);
-                            }
-                        }
-                    
-                       }
-                    }
-                }
-            }
-        } 
+    .logo {
+      margin-right: 100px;
     }
 
-    .buttons{
-        margin-top: 2px;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 30px;
-        
+    .navbar-link-items {
+      background-color: aqua;
+      display: flex;
+     
 
-        .mode-button{
-            background-color: transparent;
-            outline: 1px solid var(--dark-grey-100);
-            outline-offset: 2px;
-            text-align: center;
-            border: none;
-            width: 50px;
-            height: 50px;
+      a {
+        text-decoration: none;
+        color: var(--white);
+        padding: 10px 20px;
+      }
+
+      a:hover {
+        color: var(--cream-500);
+      }
+
+      a:focus {
+        color: var(--cream-500);
+      }
+
+      span {
+        margin-left: 10px;
+      }
+
+      a:last-child {
+        :hover {
+          cursor: pointer;
         }
 
-        .contact-button{
-            border-radius: 50px;
-            border: none;
-            background-color: var(--dark-grey-100);
-            outline: 1px solid var(--dark-grey-100);
-            outline-offset: 4px;
-            color: var(--grey);
-            height: 45px;
-            width: 130px;
-            font-size: 18px;
+        nav {
+          padding-top: 5px;
+          color: white;
+
+          .dropdown-content {
+            position: absolute;
+            display: none;
+            background-color: #f1f1f1;
+            min-width: 160px; /* Set width */
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          }
         }
+      }
+
+      a:last-child {
+        :hover {
+          cursor: pointer;
+          .dropdown-content {
+            display: grid; /* Show dropdown on hover */
+            //margin-top: 30px;
+            margin-left: -45px;
+
+            li {
+              margin-top: 30px;
+
+              a {
+                color: var(--body-text-color);
+
+                &:hover {
+                  color: var(--cream-500);
+                  background-color: var(--dark-grey-500);
+                }
+              }
+            }
+          }
+        }
+      }
     }
+  }
+
+  .buttons {
+    margin-top: 2px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 30px;
+
+    .mode-button {
+      background-color: transparent;
+      outline: 1px solid var(--dark-grey-100);
+      outline-offset: 2px;
+      text-align: center;
+      border: none;
+      width: 50px;
+      height: 50px;
+    }
+
+    .contact-button {
+      border-radius: 50px;
+      border: none;
+      background-color: var(--dark-grey-100);
+      outline: 1px solid var(--dark-grey-100);
+      outline-offset: 4px;
+      color: var(--grey);
+      height: 45px;
+      width: 130px;
+      font-size: 18px;
+    }
+  }
 }
 
 @media screen and (max-width: 600px) {
-    //.navbar a:not(:first-child) {display: none;}
-    .navbar{
-        padding: 0px;
-    }
-    
-    .navbar a {
-        display: none;
-    }
+  //.navbar a:not(:first-child) {display: none;}
+  .navbar {
+    padding: 0px;
+  }
 
-    .navbar .buttons {
-        display: none;
-    }
+  .navbar a {
+    display: none;
+  }
 
-    .navbar a.icon {
-      float: right;
-      display: block;
-    }
+  .navbar .buttons {
+    display: none;
+  }
+
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
 }
 
-@media screen and (max-width: 600px) {
-    .navbar.responsive {position: relative;}
-    .navbar.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .navbar.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-}
+//So let’s target a small screen size of 390 and 767px, to make the nav responsive on a mobile device.
 
+@media screen and (min-width: 390px) and (max-width: 767px) {
+  .container {
+    height: 100%;
+  }
 
-  
-.show {
-    display: grid;
+  .container .navbar {
+    flex-direction: column;
+  }
 }
