Mobile responsive implementation

--- a/src/app/features/feature-portfolio/components/blog-section/blog-section.component.html
+++ b/src/app/features/feature-portfolio/components/blog-section/blog-section.component.html
@@ -7,44 +7,48 @@
 
   <div class="content">
     <div class="photo-container">
-      <div class="date-container">
+      <img src="assets/images/blog-1.jpg">
+      <!-- <div class="date-container">
         <p>30 December 2023</p>
-      </div>
-      <div class="description">
+      </div> -->
+      <!-- <div class="description">
         <p>Designing The Perfect Feature Comaprison Table</p>
         <p>Web Development</p>
-      </div>
+      </div> -->
     </div>
 
     <div class="photo-container">
       <div class="photo-inner-container">
-        <div class="date-container">
+        <img src="assets/images/blog-2.jpg">
+        <!-- <div class="date-container">
           <p>30 December 2023</p>
         </div>
         <div class="description">
           <p>Designing The Perfect Feature Comaprison Table</p>
           <p>Web Development</p>
-        </div>
+        </div> -->
       </div>
       <div class="photo-inner-container">
-        <div class="date-container">
+        <img src="assets/images/blog-3.jpg">
+        <!-- <div class="date-container">
           <p>30 December 2023</p>
         </div>
         <div class="description">
           <p>Designing The Perfect Feature Comaprison Table</p>
           <p>Web Development</p>
-        </div>
+        </div> -->
       </div>
-
     </div>
+
     <div class="photo-container">
-      <div class="date-container">
+      <img src="assets/images/blog-4.jpg">
+      <!-- <div class="date-container">
         <p>30 December 2023</p>
       </div>
       <div class="description">
         <p>Designing The Perfect Feature Comaprison Table</p>
         <p>Web Development</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
