--- a/src/app/features/feature-portfolio/components/chess-background/chess-background.component.scss
+++ b/src/app/features/feature-portfolio/components/chess-background/chess-background.component.scss
@@ -11,3 +11,11 @@
         background-color: var(--background);
     }
 }
+
+@media screen and (max-width: 767px) {
+    .background{
+        .rectangle{
+            height: calc(100vh / 2.5);
+        }
+    }
+}
