--- a/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.html
+++ b/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.html
@@ -3,41 +3,54 @@
   <h2>My Selected Work</h2>
 
   <div class="work">
-    <div class="work-item-1 custom">
-      <div class="inner-work-item custom-inner-work-item">
-         <h3>Electronics eCommerce</h3>
-         <p>Web Development</p>
+
+    <div class="work-row">
+      <div class="work-item">
+        <img src="assets/images/ecommerce.jpg"> 
+        <div class="inner-work-item custom-inner-work-item">
+           <h3>Electronics eCommerce</h3>
+           <p>Web Development</p>
+        </div>
+      </div>
+      <div class="work-item">
+        <img src="assets/images/work-1.jpg">
+        <div class="inner-work-item">
+          <h3>Electronics eCommerce</h3>
+          <p>Web Development</p>
+       </div>
+      </div>
+      <div class="work-item">
+        <img src="assets/images/work-2.jpg">
+        <div class="inner-work-item">
+          <h3>Electronics eCommerce</h3>
+          <p>Web Development</p>
+       </div>
       </div>
     </div>
-    <div class="work-item-2">
-      <div class="inner-work-item">
-        <h3>Electronics eCommerce</h3>
-        <p>Web Development</p>
-     </div>
-    </div>
-    <div class="work-item-3">
-      <div class="inner-work-item">
-        <h3>Electronics eCommerce</h3>
-        <p>Web Development</p>
-     </div>
-    </div>
-    <div class="work-item-4">
-      <div class="inner-work-item">
-        <h3>Electronics eCommerce</h3>
-        <p>Web Development</p>
-     </div>
-    </div>
-    <div class="work-item-5">
-      <div class="inner-work-item">
-        <h3>Electronics eCommerce</h3>
-        <p>Web Development</p>
-     </div>
-    </div>
-    <div class="work-item-6 custom">
-      <div class="inner-work-item custom-inner-work-item">
-        <h3>Electronics eCommerce</h3>
-        <p>Web Development</p>
-     </div>
+
+   
+    <div class="work-row">
+      <div class="work-item">
+        <img src="assets/images/work-3.jpg">
+        <div class="inner-work-item">
+          <h3>Electronics eCommerce</h3>
+          <p>Web Development</p>
+       </div>
+      </div>
+      <div class="work-item">
+        <img src="assets/images/work-4.jpg">
+        <div class="inner-work-item">
+          <h3>Electronics eCommerce</h3>
+          <p>Web Development</p>
+       </div>
+      </div>
+      <div class="work-item custom">
+        <img src="assets/images/work-5.jpg">
+        <div class="inner-work-item custom-inner-work-item">
+          <h3>Electronics eCommerce</h3>
+          <p>Web Development</p>
+       </div>
+      </div>
     </div>
   </div>
 </div>
