--- a/src/app/features/feature-portfolio/components/service-section/service-section.component.html
+++ b/src/app/features/feature-portfolio/components/service-section/service-section.component.html
@@ -6,10 +6,7 @@
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>01</h1>
-        <!-- <p>
-          
-        </p> -->
-        <img src="assets/icons/programmer-laptop.svg" width="50px" height="50px">
+        <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
       <h1>Frontend Development</h1>
       <div class="line"></div>
@@ -18,7 +15,7 @@
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>02</h1>
-        <p>data</p>
+        <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
       <h1>Backend Development</h1>
       <div class="line"></div>
@@ -30,7 +27,7 @@
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>03</h1>
-        <p>data</p>
+        <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
       <h1>Mobile Development</h1>
       <div class="line"></div>
@@ -39,7 +36,7 @@
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>04</h1>
-        <p>data</p>
+        <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
       <h1>CI/CD</h1>
       <div class="line"></div>
