--- a/src/app/features/feature-portfolio/components/statistic/statistic.component.html
+++ b/src/app/features/feature-portfolio/components/statistic/statistic.component.html
@@ -1,6 +1,11 @@
 <div class="hero-social-media">
-  <h3>FOLLOW ME ------</h3>
-  <div> A B C D E</div>
+  <p>FOLLOW ME ------</p>
+  <div class="social-media-icon">
+    <mat-icon svgIcon="linkedin"></mat-icon>
+    <mat-icon svgIcon="facebook"></mat-icon>
+    <mat-icon svgIcon="pinterest"></mat-icon>
+    <mat-icon svgIcon="tiktok"></mat-icon>
+  </div>
 </div>
 
 <div class="hero-statistic">
