--- a/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.html
+++ b/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.html
@@ -29,11 +29,36 @@
       </div>
   </div>
 
+  <div class="testimonial-card-mobile">
+    <p>"Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum has been the industry's.
+      Lorem Ipsum has been the industry's standard dummy text ever since the 1800s"</p>
+
+      <div class="hero-details">
+       <div class="hero-photo">
+         <img src="assets/images/testimonial-1.jpg">
+         <div class="hero-name">
+          <h5>Daniela Madison</h5>
+          <p>Founder at CM Corp</p>
+
+          <div class="rating">
+            <img src="assets/star.png">
+            <img src="assets/star.png">
+            <img src="assets/star.png">
+            <img src="assets/star.png">
+            <img src="assets/star.png">
+            <p>5.0/5.0</p>
+           </div>
+         </div>
+       </div>
+      </div>
+  </div>
+
   <div class="testimonial-navigation">
    <button matButton>
      <img src="assets/chevron-left.svg">
      <img src="assets/chevron-left.svg">
-    <span>PREVIOUS</span> </button>
+     <img src="assets/chevron-left.svg">
+   </button>
 
    <div class="progress-bar-container">
     <p>01</p>
@@ -44,7 +69,7 @@
    </div>
 
    <button matButton>
-     <span>NEXT </span>
+     <img src="assets/chevron-rigth.svg">
      <img src="assets/chevron-rigth.svg">
      <img src="assets/chevron-rigth.svg">
   </button>
