--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -94,3 +94,95 @@
       }
     }
 }
+
+@media screen and (max-width: 767px){
+    .footer{
+        padding: 50px 20px;
+        
+        &-heading{
+            display: grid;
+            padding-top: 20px;
+            margin-bottom: 30px;
+    
+            h1{
+                font-size: 48px;
+                line-height: 60px;
+            }
+    
+            input{
+                margin: 30px 0px;
+                height: 58px;
+                width: 82%;
+                padding-left: 20px;
+            }
+    
+            input::placeholder{
+                font-size: 16px;
+            }
+    
+            button{
+                border-radius: 0px;
+                height: 58px;
+                width: 60px;
+    
+                img{
+                    width: 25px;
+                    height: 25px;
+                }
+            }
+        }
+    
+        .footer-heading-right{
+            display: block;
+            width: 80%;
+            padding-left: 0px;
+            padding-bottom: 30px;
+
+            img{
+                width: 350px;
+            }
+    
+            h1{
+                font-size: 24px;   
+
+                line-height: 40px;
+                margin-top: 30px;
+            }
+    
+            span{
+                display: block;
+                font-size: 16px;
+                font-weight: 200;
+                margin-top: 20px;
+    
+                img{
+                    width: 30px;
+                    height: 30px;
+                    margin-bottom: -5px;
+                    margin-right: 10px;
+                }
+            } 
+        }
+    
+        hr{
+            height:0.5px;
+            border-width:0;
+        }
+    
+        .footer-link{
+            display: flex;
+            justify-content: space-between;
+            padding-top: 70px;
+            font-size: 16px;
+            font-weight: 200;
+    
+          .footer-policy{
+            display: flex;
+            
+            p ~ p{
+                margin-left: 60px;
+            }
+          }
+        }
+    }
+}
