--- a/src/app/features/feature-portfolio/components/blog-section/blog-section.component.scss
+++ b/src/app/features/feature-portfolio/components/blog-section/blog-section.component.scss
@@ -1,5 +1,4 @@
 .blog {
-    height: 155vh;
     background-color: var(--background);
     padding: 100px;
     padding-top: 200px;
@@ -63,14 +62,20 @@
         .photo-container {
             width: 50%;
             background-color: var(--white);;
-            padding: 30px;
+            //padding: 30px;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: fill;
+            }
 
             .photo-inner-container {
                 display: grid;
                 row-gap: 20px;
                 height: 47.5%;
                 background-color: var(--white);;
-                padding: 30px;
+                //padding: 30px;
                 margin-bottom: 30px;
             }
         }
@@ -120,6 +125,90 @@
 
             .date-container {
                 width: 200px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 767px){
+    .blog {
+        padding: 50px 20px;
+    
+        h1 {
+            font-size: 24px;
+        }
+    
+        .title {
+            display: grid;
+            font-size: 30px;
+            margin-top: 20px;
+    
+            h1{
+                font-size: 64px;
+                color: var(--white);
+                margin-top: 25px;
+                margin-bottom: 30px;
+            }
+    
+            button {
+                border-radius: 35px;
+                outline-offset: 2px;
+                height: 40px;
+                width: 180px;
+                font-size: 14px;
+                padding-right: 20px;
+                margin-bottom: 5px;
+    
+                img{
+                    width: 20px;
+                    height: 20px;
+                    margin-left: 5px;
+                }
+            }
+    
+            button:hover{
+                background-color: var(--dark-grey-150);
+            }
+        }
+    
+        .content {
+            display: grid;
+            gap: 30px;
+            margin-top: 30px;
+            height: 550px;
+    
+            .photo-container {
+                width: 100%;
+                background-color: var(--white);;
+       
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: fill;
+                }
+    
+                .photo-inner-container {
+                    display: grid;
+                    row-gap: 30px;
+                    height: 50%;
+                    background-color: var(--white);;
+                    margin-bottom: 30px;
+                }
+            }
+       
+    
+            .photo-container:nth-child(2){
+                padding-bottom: 30px;
+                background-color: transparent;
+            }
+    
+            .photo-container:nth-child(2n + 1){
+                display: grid;
+                row-gap: 30px;
+    
+                .date-container {
+                    width: 200px;
+                }
             }
         }
     }
