--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
@@ -1,11 +1,8 @@
 .hero-section{
-    display: flex;
-    width: auto;
-
     .description{
          padding-left: 100px;
          position: absolute;
-         top: 250px;
+         top: 200px;
          z-index: 1;
 
         .name{
@@ -28,13 +25,13 @@
 
         .title{
             width: 75%;
-            font-size: 120px;
+            font-size: 110px;
             font-weight: 400;
             color: var(--white);
             align-content: center;    
             padding-bottom: 20px;  
-            line-height: 140px;
-            margin-bottom: 30px;
+            line-height: 120px;
+            margin-bottom: 20px;
         }
 
         .title-play-button{
@@ -87,16 +84,94 @@
     }
 
     .image{
+        width: 50%;
         position: absolute;
-        top: 130px;
+        top: 170px;
+        //bottom: 0px;
         right: 0px;
-        background-color: #D9D9D9;
-        overflow: hidden;
-        object-fit: fill;
+        //background-color: #D9D9D9;
+        //overflow: hidden;
         //object-fit: cover;
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+        }
     }
 }
 
-@media only screen and (max-width: 768px){
+@media screen and (max-width: 767px) {
+    .hero-section{
+        .description{
+            padding-left: 20px;
 
+            .name{
+                font-size: 24px;
+    
+                .hero-name-line{
+                   display: none;
+                }
+            }
+
+            .title{
+                width: 90%;
+            font-size: 60px; 
+            padding-bottom: 20px;  
+            line-height: 50px;
+            margin-bottom: 5px;
+               
+            }
+    
+            .title-play-button{
+               
+               
+            
+                img{
+                    
+                }
+            }
+            
+            .subtitle{
+                width: 75%;
+            color: var(--white);
+            align-content: center;  
+            margin-bottom: 25px;  
+            font-size: 16px;
+            font-weight: 200;
+            line-height: 15px;
+                
+            }
+            
+            .download-cv{
+                button{
+                    border: none;
+
+                    border-radius: 35px;
+                    background-image:  linear-gradient(to left, var(--cream-500), var(--cream-100));
+                    outline: 1px solid var(--cream-500);
+                    outline-offset: 2px;
+                    height: 40px;
+                    width: 170px;
+                    color: var(--cream-700);
+                    font-family: var(--kanit-font-family);
+                    font-size: 14px;
+                    font-weight: 300;
+                   
+                }
+        
+                button:hover{
+                    background-image:  linear-gradient(to left, var(--cream-500), var(--cream-100));
+                }
+            }
+
+        }
+
+        .image{
+            position: absolute;
+            top: 50px;
+            object-fit: fill;
+            width: 100%;
+        }
+    }
 }
