--- a/src/app/features/feature-portfolio/components/service-section/service-section.component.scss
+++ b/src/app/features/feature-portfolio/components/service-section/service-section.component.scss
@@ -1,5 +1,4 @@
 .service{
-    height: 160vh;
     background-color: var(--background);
     padding: 100px;
     padding-top: 200px;
@@ -31,6 +30,7 @@
 
             .item-count{
                 display: flex;
+                justify-content: space-between;
 
                 h1{          
                     color: var(--cream-500);
@@ -38,20 +38,11 @@
                     font-size: 18px;
                 }
 
-                // p{
-                //     text-align: right;
-                //     width: 95%;
-                //     font-size: 24px;
-                // }
-
-                img{
-                    display: flex;
-                    align-items: flex-end;
-                    width: 95%;
-                    font-size: 24px;
+                mat-icon{
+                    width: 50px;
+                    height: 50px;
                     color: var(--cream-500);
                 }
-
             }
 
             h1{
@@ -59,6 +50,7 @@
                 margin-top: 20px;
                 margin-bottom: 20px;
                 font-size: 24px;
+                margin-left: 0px;
             }
 
             .line{
@@ -74,13 +66,51 @@
                 font-weight: 200;
             }
         }
+    }
+}
 
-        .expertise-area-item{
-           // background-color: aliceblue;
+@media screen and (max-width: 767px) {
+
+    .service{
+        padding: 50px 20px;
+        
+        h1{
+            font-size: 24px;
+            font-weight: 400;
         }
-
-        .expertise-area-item:first-child{
-            //padding-top: 15px;
+    
+        h2{
+            font-size: 48px;
+            margin-top: 25px;
+            margin-bottom: 25px;
+        }
+    
+        .expertise-area{
+           display: grid;
+           row-gap: 15px;
+    
+            .expertise-area-item{
+                width: 100%;
+                margin: 0px;
+                padding: 25px;
+    
+                h1{
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                    font-size: 24px;
+                }
+    
+                .line{
+                    width: 50%;
+                    height: 2px;
+                    margin-bottom: 20px;
+                }
+    
+                p{
+                    font-size: 18px;
+                    font-weight: 200;
+                }
+            }
         }
     }
 }
