--- a/src/app/features/feature-portfolio/components/statistic/statistic.component.scss
+++ b/src/app/features/feature-portfolio/components/statistic/statistic.component.scss
@@ -1,40 +1,52 @@
 .hero{
     &-social-media{
-        top: 859px;
         position: absolute;
-        width: 75%;
-        padding-left: 100px;
+        width: 300px;
+        padding: 20px 65px;
         color: var(--white);
         align-content: center; 
-        width: 356px;
-        height: 114px;
         background-color: var(--black);
         right: 0px;
+        text-align: left;
+
+
+        p{
+            font-weight: 200;
+        }
+
+        .social-media-icon{
+            display: flex;
+            justify-content: space-between;
+
+            mat-icon{
+                margin-top: 20px;
+                background-color: white;
+                color: black;
+            }
+        }
     }
     
     &-statistic{
-        display: flex;
-        justify-content: space-between;
-        padding: 142px 100px;
+        padding: 50px 100px;
         align-content: center; 
-        width: 100%;
-        height: 200px;
         background-color: var(--black);
+        display: grid;
+        grid-template-columns: auto auto auto;
 
         .hero-statistic-item{
-            padding: 0px 100px;
+            row-gap: 30px;
             text-align: center;
             align-content: center;
         
             h1{
-                font-size: 100px;
+                font-size: 64px;
                 font-weight: 400;
                 padding-bottom: 20px;
                 color: var(--white);
             }
         
             p{
-                font-size: 18px;
+                font-size: 16px;
                 font-weight: 200;  
                 color: var(--body-text-color);
             }
@@ -48,6 +60,39 @@
             p{
                 color: var(--white);
             }
+        }
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .hero{
+        &-social-media{
+            top: 71vh;
+            padding-left: 100px;
+            width: 186px;
+            height: 80px;
+            right: 0px;
+            padding: 10px 25px;
+            //bottom: 0px;
+
+            h4{
+                font-size: 10px;
+                font-weight: 200;
+            }
+
+            .social-media-icon{
+                display: flex;
+                justify-content: space-between;
+                margin-top: 1px;
+            }
+        }
+
+        &-statistic{
+            grid-template-columns: 1fr;
+            row-gap: 10px;
+            padding: 20px;
+
+
         }
     }
 }
