--- a/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.scss
+++ b/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.scss
@@ -1,5 +1,4 @@
 .testimonial{
-    height: 110vh;
     background-color: var(--dark-grey-500);
     padding: 100px 200px;
     text-align: center;
@@ -15,6 +14,9 @@
         font-size: 64px;
         color: var(--white);
         padding-bottom: 80px;
+    }
+    .testimonial-card-mobile{
+        display: none;
     }
 
     .testimonial-card{
@@ -166,6 +168,145 @@
                 .html { 
                     width: 25%; 
                 } 
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .testimonial{
+        background-color: var(--dark-grey-500);
+        padding: 50px 20px;
+        text-align: center;
+    
+        h1{
+            font-size: 24px;
+            padding-bottom: 30px;
+        }
+    
+        h2{
+            font-size: 48;
+            padding-bottom: 40px;
+        }
+    
+        .testimonial-card{
+            display: none;
+        }
+
+        .testimonial-card-mobile{
+            display: grid;
+            grid-row: 30px;
+
+            p{
+                color: var(--white);
+                font-size: 14px;
+                font-weight: 200;
+                line-height: 20px;
+                text-align: left;
+            }
+
+            .hero-details{
+                display: flex;
+                justify-content: space-between;
+                margin-top: 30px;
+
+                .hero-photo{
+                    display: flex;
+                    align-content: center;
+
+                    img{
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 50px;
+                        margin-right: 30px;
+                    }
+
+                    .hero-name{
+
+                        h5{
+                            font-size: 18px;
+                            color: var(--cream-500);
+                        }
+    
+                        p{
+                           font-size: 12px;
+                           font-weight: 200;
+                           color: var(--white);
+                        }
+
+                        .rating{
+                            margin-top: 10px;
+                            text-align: left;
+                            
+                            img{
+                                margin-right: 5px;
+                                width: 15px;
+                                height: 15px;
+                            }
+                        }
+
+                    }
+                }
+            }
+        }
+    
+        .testimonial-navigation{
+            padding: 50px 10px 0px 10px;
+            display: flex;
+            justify-content: space-between;
+    
+            button{
+                font-size: 18px;
+                background-color: transparent;
+                border: none;
+                width: auto;
+                height: 40px;
+    
+                img{
+                    width: 16px;
+                    height: 16px;
+                    margin-right: -17px;
+                    margin-bottom: -3px;
+                }
+    
+                img + img{
+                    margin-left: 10px;
+                }
+            }
+    
+            button:hover{
+                border-radius: 0px;
+                background-color: transparent;
+            }
+    
+            .progress-bar-container{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 50%; 
+                
+                p{
+                    font-weight: 200;
+                }
+
+                .progress-bar{
+                    background-color: var(--white); 
+                    height: 3px;
+                    width: 80%;
+                    margin: 0px 10px;
+        
+                    .progress{
+                        background-color: var(--cream-500); 
+                        padding: 0%; 
+                        text-align: right; 
+                        font-size: 20px; 
+                        height: 3px;
+                    }
+        
+                    .html { 
+                        width: 25%; 
+                    } 
+                }
             }
         }
     }
