--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
       <a class="custom" [routerLink]="['/portfolio']">PORTFOLIO</a>
       <a [routerLink]="['/service']">SERVICE</a>
       
-      <a (click)="showDropdown()">
+      <a (click)="showPageDropdown()">
         PAGES
         <nav class="nav">    
         <ul class="dropdown-content" id="dropdown-content">
@@ -24,11 +24,34 @@
   </div>
 
   <div class="buttons">
-     <button class="mode-button" mat-icon-button>
+     <!-- <button class="mode-button" mat-icon-button>
       <img src="assets/moon.png" width="40px" height="40px">
-     </button>
-     <button class="contact-button" mat-stroked-button>CONTACT</button>
+     </button> -->
+     <button class="contact-button" [routerLink]="['/contact']">CONTACT</button>
   </div>
 </div>
+
+<div class="navbar-mobile">
+    <img src="assets/logo.png" width="50px" height="30px">
+
+    <button class="contact-button"  [matMenuTriggerFor]="menu" #menuTrigger="matMenuTrigger">
+      <mat-icon svgIcon="menu" *ngIf="!menuTrigger.menuOpen"></mat-icon>
+      <mat-icon svgIcon="close" *ngIf="menuTrigger.menuOpen"></mat-icon>
+
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item [routerLink]="['']">HOME</button>
+        <button mat-menu-item [routerLink]="['/about']">ABOUT</button>
+        <button mat-menu-item [routerLink]="['/portfolio']">PORTFOLIO</button>
+        <button mat-menu-item [matMenuTriggerFor]="pages">PAGES</button>
+      </mat-menu>
+      
+      <mat-menu #pages="matMenu">
+        <button mat-menu-item [routerLink]="['/blog']">BLOG</button>
+        <button mat-menu-item [routerLink]="['/single-blog']">SINGLE BLOG</button>
+        <button mat-menu-item [routerLink]="['/single-portfolio']">SINGLE PORTFOLIO</button>
+      </mat-menu>
+    </button>
+</div>
+
 
 
