--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -20,14 +20,12 @@
     }
 
     .navbar-link-items {
-      ///background-color: aqua;
-      display: flex;
-     
 
       a {
+        float: left;
         text-decoration: none;
         color: var(--white);
-        padding: 10px 20px;
+        padding: 2px 20px;
       }
 
       a:hover {
@@ -43,7 +41,73 @@
       }
 
       a:last-child {
+        &:hover {
+          cursor: pointer;
+        }
+
+        nav {
+          padding-top: 5px;
+          color: white;
+
+          .dropdown-content {
+            position: absolute;
+            display: none;
+            background-color: #f1f1f1;
+            min-width: 160px; /* Set width */
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          }
+        }
+      }
+
+      a:last-child {
         :hover {
+          cursor: pointer;
+          .dropdown-content {
+            display: grid; /* Show dropdown on hover */
+            //margin-top: 30px;
+            margin-left: -45px;
+
+            li {
+              margin-top: 30px;
+
+              a {
+                color: var(--body-text-color);
+
+                &:hover {
+                  color: var(--cream-500);
+                  background-color: var(--dark-grey-500);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .navbar-link-items-mobile{
+      display: none;
+
+      a {
+        float: left;
+        text-decoration: none;
+        color: var(--white);
+        padding: 2px 20px;
+      }
+
+      a:hover {
+        color: var(--cream-500);
+      }
+
+      a:focus {
+        color: var(--cream-500);
+      }
+
+      span {
+        margin-left: 10px;
+      }
+
+      a:last-child {
+        &:hover {
           cursor: pointer;
         }
 
@@ -90,7 +154,7 @@
   .buttons {
     margin-top: 2px;
     display: flex;
-    justify-content: flex-end;
+    //justify-content: flex-end;
     align-items: center;
     gap: 30px;
 
@@ -105,6 +169,7 @@
     }
 
     .contact-button {
+      float: left;
       border-radius: 50px;
       border: none;
       background-color: var(--dark-grey-100);
@@ -114,38 +179,101 @@
       height: 45px;
       width: 130px;
       font-size: 18px;
+
+      &:hover{
+        cursor: pointer;
+        background-color: var(--dark-grey-150);
+      }
     }
   }
 }
 
-@media screen and (max-width: 600px) {
-  //.navbar a:not(:first-child) {display: none;}
-  .navbar {
-    padding: 0px;
-  }
+.navbar-mobile{
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+  font-family: var(--kanit-font-family);
+  font-size: 18px;
+  font-weight: 200;
+  position: absolute;
+  top: 40px;
+  width: 100%;
+  padding: 0px 100px;
+  z-index: 1;
 
-  .navbar a {
+  .navbar-link-items{
     display: none;
+
+    li{
+     a{
+      text-decoration: none;
+      color: var(--white);
+     }
+      //color: var(--cream-500);
+      //padding: 5px;
+      margin-bottom: 5px;
+    }
+
+    .page-dropdown{
+      display: none;
+      
+      text-decoration: none;
+    }
+
+    nav {
+
+      .dropdown-content {
+        position: absolute;
+        //background-color: var(--cream-100);
+        color: var(--cream-500);
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        right: 50px;
+        top: 25px;
+        text-decoration: none;
+        padding: 10px;
+        
+        a{
+          padding: 5px;
+        }
+      }
+    }
   }
 
-  .navbar .buttons {
-    display: none;
-  }
-
-  .navbar a.icon {
-    float: right;
-    display: block;
+  .contact-button{
+    mat-menu{
+      position: absolute;
+        background-color: transparent;
+        color: var(--cream-500);
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        right: 50px;
+        top: 25px;
+        text-decoration: none;
+        padding: 10px;
+    }
   }
 }
 
-//So let’s target a small screen size of 390 and 767px, to make the nav responsive on a mobile device.
 
-@media screen and (min-width: 390px) and (max-width: 767px) {
-  .container {
-    height: 100%;
+.show{
+  display: block !important;
+}
+
+
+@media screen and (max-width: 767px) {
+ 
+  .navbar  {
+    display: none;
   }
 
-  .container .navbar {
-    flex-direction: column;
+  .navbar-mobile{
+    display: flex;
+    padding: 0px 20px;
+
+   button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+   }
   }
 }
+
